# investor

./: .env.example  .gitignore  CLAUDE.md  README.md  SKILL.md  pyproject.toml
.claude/: settings.json
data/: daily_lite_history.json  decision_history.json  market_news.sqlite  monitor_alerts.json  monitor_history.json  paper_portfolio.csv  portfolio.csv  portfolio_100man.csv  portfolio_20man.csv  research_history.json  score_snapshots.json  trade_journal.json  watchlist.json  watchlist_research_history.json
docs/: autoplan-review-2026-05-17.md  data-contract-2026-05-30.md  hypothesis-tracker.md  improvement-plan.md  retrospective-2026-04.md  review-summary-2026-05-30.md  sector-bias-analysis-2026-05-30.md  structural-review.md  system-diagram.md  watchlist-ui-improvements.md  wide-research-validation-plan.md  workflow-overview.md
investor/: api.py  config.py  supabase_store.py  supabase_sync.py
plan/: decision_debate_plan.md  first_plan.md  implementation2_plan.md  implementation_plan.md  phase1_screen_phase2_research.md  reduce_usage.md  research_findings.md  research_plan.md  review-followup-implementation-plan-2026-05-30.md  supabase_migration_plan.md
reports/: dashboard.html
scripts/: add_position.py  backfill_supabase.py  close_position.py  fetch_returns.py  record_outcomes.py  reflection_memory.py  run_monitor.py  run_research.py  send_pending_notifications.py  send_slack_proposals.py  show_calibration_stats.py  show_portfolio.py  tool.py  validate_scores.py  weekly_review.py
skills/: daily_lite.py  dashboard.py  decision.py  monitor.py  portfolio.py  (+5 more)
(+145 files in other folders)
