[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investor"
version = "0.1.0"
description = "AI-powered autonomous US stock investment agent"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0",
    "pandas>=2.0.0",
    "ta>=0.11.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "yfinance>=0.2.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "respx>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["investor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires real API keys and network access",
]
